--- a/public/index.html
+++ b/public/index.html
@@ -6,33 +6,44 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"> 
-  <title>Jelpha | Queremos ayudarte</title>
+  <title>Banco Futuro | Queremos ser parte de tu vida</title>
 </head>
 <body>
   <div id="app"></div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@1.0.23/bundled/lenis.min.js"></script> 
 
   <script>
+    const lenis = new Lenis()
+
+    lenis.on('scroll', (e) => {
+        // console.log(e)
+    })
+    function raf(time) {
+        lenis.raf(time)
+        requestAnimationFrame(raf)
+    }
+    requestAnimationFrame(raf);
+
     (function($){
-
-$(document).ready(
-
-  function(){
-
-        // al hacer click, animar el scroll hacia arriba
-        $('.app-link-to-form').click( function( e ) {
-
-          e.preventDefault();
-          $('html, body').animate({
-            scrollTop: $("#form-container").offset().top
-        }, 2000);
-
+      $(document).ready(
+        function(){
+          $('.app-link-to-form').click( function( e ) {
+            e.preventDefault();
+            $('html, body').animate({
+              scrollTop: $("#form-container").offset().top
+            }, 2000);
+          });
         });
-
-      });
-
-    })(jQuery);
+      })(jQuery);
+      window.onload = function() {
+          var loader = document.getElementById('container-loader');
+          setTimeout(function() {
+              loader.style.visibility = "hidden";
+              loader.style.opacity = '0';
+          }, 3000);
+      }
   </script>
 </body>
 </html>
